Kill NewTabPage.NumberOfMouseOvers.

It's not clear what it would mean for the behavior to be correct, let
alone whether it actually is.

BUG=611341
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2091323002
Cr-Commit-Position: refs/heads/master@{#404362}

Former-commit-id: c7c5c817f22c6785a44a681bc562d05c6c4646d0